--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -16,6 +16,8 @@
 
 
 .container {
+    max-width: 1500px;
+    margin: 0 auto;
     header {
         display: flex;
         justify-content: space-between;
@@ -70,7 +72,7 @@
         height: calc(100vh - 150px);
         display: flex;
         gap: 1.5rem;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         padding: 0 20px;
 
@@ -462,6 +464,11 @@
         flex-direction: column;
         gap: .5rem;
 
+        .warning{
+            font-size: 12px;
+            color: red;
+        }
+
         .p-inputtext {
             width: 100% !important;
             padding: 5px 10px;
@@ -475,6 +482,62 @@
                 font-size: 12px;
                 color: var(--text-main);
             }
+        }
+    }
+
+    .palavras-chave{
+        display: flex;
+        flex-direction: column;
+        gap: .5rem;
+        padding-top: 20px;
+
+        h2{
+            font-size: 16px;
+        }
+        .tags-list{
+            display: flex;
+            flex-wrap: wrap;
+            width: 100%;
+            height: 200px;
+            gap: .5rem;
+            align-items: flex-start;
+            overflow-y: scroll;
+            background-color: rgba($color: #344156, $alpha: .5);
+            border-radius: 5px;
+            padding: .5rem;
+
+
+            &::-webkit-scrollbar {
+                display: none;
+
+            }
+
+
+            .tagItem {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                text-align: start;
+                gap: .5rem;
+                color: white;
+                font-size: 14px;
+                background-color: rgba($color: #344156, $alpha: 1);
+
+                border-radius: 5px;
+                padding: 5px 10px;
+
+                i {
+                    cursor: pointer;
+                }
+            }
+        }
+        button {
+            padding: 5px 0;
+            background-color: var(--topbar-bg);
+            border: none;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
         }
     }
 }
